# Fractal-Compression

./: CMakeLists.txt  LICENSE  README.md  build.bat
images/Sample1/4x4/: Compressed file
images/Sample1/8x8/: Compressed file
src/: AbstractCompression.cpp  AbstractCompression.h  BlockCompression.cpp  BlockCompression.h  FractalFileIO.cpp  FractalFileIO.h  Metrics.cpp  Metrics.h  Objects.h  main.cpp
